--- a/Front/app/inbox/inbox.component.css
+++ b/Front/app/inbox/inbox.component.css
@@ -19,19 +19,23 @@
     opacity: 1;
   }
 }
+
 .msg {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  font-size: 20px;
+  color: gray;
   width: 60%;
   height: 80%;
   border-radius: 20px;
+  padding: 15px;
   animation-name: pop;
   animation-duration: 0.6s;
   animation-timing-function: ease-in-out;
+  box-shadow: 5px 5px rgba(107, 211, 11);
+
 }
 @keyframes pop {
   from {
@@ -41,6 +45,7 @@
     top: 50%;
   }
 }
+
 .close {
   font-size: 50px;
   margin-left: 95%;
@@ -50,6 +55,7 @@
 .close:hover {
   color: black;
 }
+
 div.toolbox {
   width: 90%;
   height: 6.5%;
@@ -60,42 +66,53 @@ div.toolbox {
   align-items: center;
 }
 div.toolbox a {
-  width: 38%;
   text-align: left;
   margin-left: 6%;
   cursor: pointer;
   font-weight: bold;
   color: #424242;
 }
+div.toolbox a.subject{
+  margin-left: calc(100% - 63.5%);
+}
 div.toolbox a.date {
-  width: 12%;
+  margin-left: calc(100% - 63.5%);
 }
 div.toolbox a:hover {
-  color: blue;
+  color: #6BD30B;
   text-decoration: underline;
 }
+
 div.toolbox button {
   color: #95979b;
   border: none;
   margin-right: 3%;
   font-size: 24px;
   background-color: transparent;
+  cursor: pointer;
 }
 div.toolbox button:hover {
   background-color: #d4d5d8;
   border-radius: 10%;
 }
-div.toolbox button.read {
+div.toolbox button.read, div.toolbox button.prev, div.toolbox button.next {
   color: deepskyblue;
+  cursor: pointer;
 }
 div.toolbox span {
   color: #424242;
-  margin-left: auto;
+  margin-left: 2%;
   padding-right: 2.5%;
   font-weight: bold;
   width: 8.5%;
   white-space: nowrap;
   text-align: left;
+}
+div.toolbox button.prev {
+  margin-left: auto;
+}
+div.toolbox button:disabled {
+  color: #95979b;
 }
 
 div.row {
@@ -134,4 +151,35 @@ span.date {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+#display .msg .subject{
+  font-size: 40px;
+  margin-top: -50px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: black;
+}
+#display .msg .users{
+  padding: 5px;
+  font-size: 22px;
+  text-align: left;
+  border-bottom: 2px solid rgb(199, 199, 199);
+  font-style: italic;
+}
+#display .msg .users .arrow{
+  font-size: 30px;
+  color: #6BD30B;
+}
+#display .msg .content{
+  text-align: center;
+  height: 60%;
+  font-size: 20px;
+  margin: 15px 0px;
+  margin-bottom: 60px;
+}
+#display .msg .date{
+  text-align: right;
+  font-size: 15px;
+  margin-left: 20px;
+  font-style: italic;
 }
