--- a/email-front/src/app/login/login.component.html
+++ b/email-front/src/app/login/login.component.html
@@ -11,7 +11,7 @@
             <input ngModel name="email" #email="ngModel" type="email" placeholder="Email"><br>
             <span class="icon"><i class="material-icons">lock</i></span>
             <input ngModel name="password" #password="ngModel" type="password" placeholder="Password"><br>
-            <button (click)="login(email.value, password.value)" routerLink="/mail/inbox">Login</button>
+            <button (click)="login(email.value, password.value)">Login</button>
         </div>
     </div>
 </div>
