--- a/email-front/src/app/mail/inbox/inbox.component.css
+++ b/email-front/src/app/mail/inbox/inbox.component.css
@@ -72,11 +72,11 @@ div.toolbox a {
   font-weight: bold;
   color: #424242;
 }
-div.toolbox a.subject{
-  margin-left: calc(100% - 63.5%);
+div.toolbox a.subject {
+  margin-left: 36%;
 }
 div.toolbox a.date {
-  margin-left: calc(100% - 63.5%);
+  margin-left: 35%;
 }
 div.toolbox a:hover {
   color: #6BD30B;
