--- a/email-front/src/app/mail/compose/compose.component.html
+++ b/email-front/src/app/mail/compose/compose.component.html
@@ -16,13 +16,13 @@
     </div>
 
     <div class="bottom">
-      <select name="priority">
+      <select name="priority" id="priority">
         <option value="3">Very High</option>
         <option value="2">High</option>
         <option value="1">Medium</option>
         <option value="0">Low</option>
       </select>
-      <button class="send">Save to draft</button>
+      <button class="send" (click) = "saveDraft(to.value, subject.value, content.value)">Save to draft</button>
       <button class="send" (click) = "createEmail(to.value, subject.value, content.value)">Send</button>
     </div>
 
