--- a/email-front/src/app/mail/mail.component.html
+++ b/email-front/src/app/mail/mail.component.html
@@ -24,5 +24,8 @@
     <button routerLinkActive="active"><a routerLink="/mail/sent">Sent</a></button>
     <button routerLinkActive="active"><a routerLink="/mail/draft">Draft</a></button>
     <button routerLinkActive="active"><a routerLink="/mail/folders">User Folders</a></button>
+    <button routerLinkActive="active"><a routerLink="/mail/contacts">Contacts</a></button>
+    <button routerLinkActive="active"><a routerLink="/mail/addContact">add Contact</a></button>
+    
   </aside>
 </div>
