--- a/email-front/src/app/mail/compose/compose.component.css
+++ b/email-front/src/app/mail/compose/compose.component.css
@@ -16,12 +16,12 @@ label{
   color: #282d36;
   margin-left: 15px;
 }
-input{
+input.subject, input.to{
   text-align: left;
   border: none;
   border-bottom: 2px solid #d4d5d8;
 }
-input:focus{
+input.subject:focus,input.to:focus{
   outline: none;
   border-bottom: 2px solid #282d36;
 }
@@ -62,7 +62,9 @@ select:hover{
 }
 div.bottom{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1.5fr 1fr 1fr 1fr;
   grid-gap: 10%;
   margin: 0 5%;
 }
+
+
