--- a/email-front/src/app/mail/mail.component.html
+++ b/email-front/src/app/mail/mail.component.html
@@ -2,16 +2,16 @@
 <div class="layout">
   <header>
     <button class="search"> <i class="material-icons">search</i> </button>
-    <input type="text" class="search" placeholder = "Search...">
+    <input type="text" class="search" placeholder = "Search..." [(ngModel)] = "searchString">
     <button class="filter" (click)="toggle()"> <i class="material-icons">filter_list</i> </button>
     <div class="filterAdvanced" #filter>
-      <input type="checkbox" id="to">
+      <input type="checkbox" id="to" [(ngModel)] = "filterTo">
       <label for="to">To</label>
-      <input type="checkbox" id="from">
+      <input type="checkbox" id="from" [(ngModel)] = "filterFrom">
       <label for="subject">From</label>
-      <input type="checkbox" id="subject">
+      <input type="checkbox" id="subject" [(ngModel)] = "filterSubject">
       <label for="subject">Subject</label>
-      <input type="checkbox" id="body">
+      <input type="checkbox" id="body" [(ngModel)] = "filterBody">
       <label for="body">Body</label>
     </div>
   </header>
