--- a/email-front/src/app/mail/inbox/inbox.component.html
+++ b/email-front/src/app/mail/inbox/inbox.component.html
@@ -10,8 +10,8 @@
   <button title="Add to folder"><i class="material-icons">folder</i></button>
   <button title="Mark as read" class="read"><i class="material-icons" (click)="markAsRead()">done_all</i></button>
   <button title="Mark as unread"><i class="material-icons" (click)="markAsUnread()">done_all</i></button>
-  <button title="Delete"><i class="material-icons" (click)=deleteEmails()>delete</i></button>
-  <button title="prio" [(ngModel)] = "prioSort"><i class="material-icons">sort</i></button>
+  <button title="Delete"><i class="material-icons" (click)="deleteEmails()">delete</i></button>
+  <button title="prio" [(ngModel)] = "prioSort" (click)="sortEmails()"><i class="material-icons">sort</i></button>
   <button title="Previous" class="prev" [disabled] = "pageNumber == 1" (click)="prev()"><i class="material-icons">arrow_back</i></button>
   <button title="Next" class="next" [disabled] = "allEmails.length - (pageNumber - 1) * 10 <= 10" (click)="next()"><i class="material-icons">arrow_forward</i></button>
   <span>{{1 + (pageNumber - 1) * 10}}―{{allEmails.length - (pageNumber - 1) * 10 > 10 ? pageNumber * 10 : allEmails.length}} of {{allEmails.length}}</span>
