file to be continue

--- a/email-front/src/app/mail/compose/compose.component.html
+++ b/email-front/src/app/mail/compose/compose.component.html
@@ -17,14 +17,14 @@
 
     <div class="bottom">
       <div class="attah">
-        <input type="file" class="file" (change)= "attach($event)">
+        <input type="file" class="file[]" (change)= "attach($event)"  multiple="multiple">
         <button class="upload" (click) = "upload()">Upload</button>
       </div>
       <select name="priority" id="priority">
-        <option value="3">Very High</option>
-        <option value="2">High</option>
-        <option value="1">Medium</option>
-        <option value="0">Low</option>
+        <option value="4">Very High</option>
+        <option value="3">High</option>
+        <option value="2">Medium</option>
+        <option value="1">Low</option>
       </select>
       <button class="send" (click) = "saveDraft(to.value, subject.value, content.value)">Save to draft</button>
       <button class="send" (click) = "createEmail(to.value, subject.value, content.value)">Send</button>
