--- a/email-front/src/app/mail/draft/draft.component.html
+++ b/email-front/src/app/mail/draft/draft.component.html
@@ -82,4 +82,5 @@
     <div class="content">{{content}}</div>
     <div class="date">{{date}}</div>
   </div>
+  <button (click) = "edit()" routerLink="/mail/compose" class="edit">Edit</button>
 </div>
