--- a/email-front/src/app/mail/draft/draft.component.css
+++ b/email-front/src/app/mail/draft/draft.component.css
@@ -183,4 +183,57 @@
     margin-left: 20px;
     font-style: italic;
   }
+  header {
+    height: 10%;
+    background-color: white;
+    display: flex;
+    padding: 5px;
+    margin: 0px;
+    justify-content: center;
+    align-items: center;
+  }
+  input.search {
+    width: 70%;
+    height: 80%;
+    text-align: left;
+    padding: 0 6%;
+    font-size: 20px;
+    background-color: #eee;
+    border: none;
+    color: #1d2127;
+    border-radius: 10px;
+  }
+  input.search:focus {
+    outline: 2px solid #d4d5d8;
+  }
+  header button {
+    height: 64%;
+    background-color: #eee;
+    border: none;
+    color: #95979b;
+  }
+  button.search {
+    margin-right: -5%;
+    z-index: 1;
+  }
+  button.filter {
+    margin-left: -5%;
+    padding-top: 5px;
+  }
+  button.search:hover, button.filter:hover {
+    background-color: #d4d5d8;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .filterAdvanced{
+    position: absolute;
+    top: 50px;
+    right: 110px;
+    background-color: #eee;
+    display: none;
+    border-radius: 10px;
+    color: #95979b;
+  }
+  
   
